apps/staging/open-webui/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-inference
spec:
  type: ExternalName
  externalName: vllm-inference-helios.andlogreg.work
